--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
         <item>订阅</item>
         <item>历史</item>
     </string-array>
+    <string name="play_mode_order_text">顺序播放</string>
+    <string name="play_mode_random_text">随机播放</string>
+    <string name="play_mode_list_play_text">列表循环</string>
+    <string name="play_mode_single_loop_text">单曲循环</string>
 </resources>
