--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,5 @@
     <string name="play_mode_single_loop_text">单曲循环</string>
     <string name="order_text">順序</string>
     <string name="revers_text">逆序</string>
-    <string name="playing_text">正在播放</string>
-    <string name="pause_text">已暂停</string>
+    <string name="click_play_tips_text">点击播放</string>
 </resources>
